scripts/gen/DCLParser.py
# Generated from DCL.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class DCLParser ( Parser ):

    grammarFileName = "DCL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';K5 project'", "'</A,end>'", "'</T,end>'", 
                     "'</P,end>'", "'/G,GLOBAL'", "'/G,RETAIN'", "'</G,end>'", 
                     "'/A,'", "'<'", "'>'", "','", "'/T,'", "'ENUM:'", "'='", 
                     "'BITFIELD:'", "':'", "'/P,'", "'T'", "'F'", "'E'", 
                     "'B'", "'#'", "'%'", "'OnCall'", "'U'", "'Struct'", 
                     "'/V,'", "'G,'", "'L,'", "'(0)'", "'['", "']'", "'/V,='", 
                     "'t#'", "'T#'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'**'", "'*'", "'/'", "'MOD'", "'+'", "'-'", "<INVALID>", 
                     "'<>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "TRUE", "FALSE", "NOT", "EXPO", "MULT", "DIV", "MOD", 
                      "ADD", "SUB", "COMPARISON", "INEQUAL", "AND", "XOR", 
                      "OR", "TYPE", "ARITHMETICBUILTINFUNCTIONS", "DATACONVERSIONBUILTINFUNCTIONS", 
                      "FOR", "TO", "BY", "DO", "ENDFOR", "WHILE", "ENDWHILE", 
                      "REPEAT", "UNTIL", "ENDREPEAT", "IF", "THEN", "ELSEIF", 
                      "ELSE", "ENDIF", "CASE", "OF", "ENDCASE", "EXIT", 
                      "RETURN", "INT", "FLOAT", "FRACTION", "ID", "WS" ]

    RULE_start = 0
    RULE_local = 1
    RULE_apart = 2
    RULE_tpart = 3
    RULE_ppart = 4
    RULE_vpart = 5
    RULE_varnamelist = 6
    RULE_numdatas = 7
    RULE_booldatas = 8
    RULE_number = 9
    RULE_timedatas = 10

    ruleNames =  [ "start", "local", "apart", "tpart", "ppart", "vpart", 
                   "varnamelist", "numdatas", "booldatas", "number", "timedatas" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    TRUE=36
    FALSE=37
    NOT=38
    EXPO=39
    MULT=40
    DIV=41
    MOD=42
    ADD=43
    SUB=44
    COMPARISON=45
    INEQUAL=46
    AND=47
    XOR=48
    OR=49
    TYPE=50
    ARITHMETICBUILTINFUNCTIONS=51
    DATACONVERSIONBUILTINFUNCTIONS=52
    FOR=53
    TO=54
    BY=55
    DO=56
    ENDFOR=57
    WHILE=58
    ENDWHILE=59
    REPEAT=60
    UNTIL=61
    ENDREPEAT=62
    IF=63
    THEN=64
    ELSEIF=65
    ELSE=66
    ENDIF=67
    CASE=68
    OF=69
    ENDCASE=70
    EXIT=71
    RETURN=72
    INT=73
    FLOAT=74
    FRACTION=75
    ID=76
    WS=77

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def apart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DCLParser.ApartContext)
            else:
                return self.getTypedRuleContext(DCLParser.ApartContext,i)


        def tpart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DCLParser.TpartContext)
            else:
                return self.getTypedRuleContext(DCLParser.TpartContext,i)


        def ppart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DCLParser.PpartContext)
            else:
                return self.getTypedRuleContext(DCLParser.PpartContext,i)


        def vpart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DCLParser.VpartContext)
            else:
                return self.getTypedRuleContext(DCLParser.VpartContext,i)


        def getRuleIndex(self):
            return DCLParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = DCLParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.match(DCLParser.T__0)
            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DCLParser.T__7:
                self.state = 23
                self.apart()
                self.state = 28
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 29
            self.match(DCLParser.T__1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DCLParser.T__11:
                self.state = 30
                self.tpart()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 36
            self.match(DCLParser.T__2)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DCLParser.T__16:
                self.state = 37
                self.ppart()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 43
            self.match(DCLParser.T__3)
            self.state = 44
            self.match(DCLParser.T__4)
            self.state = 45
            self.match(DCLParser.T__5)
            self.state = 46
            self.match(DCLParser.T__6)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DCLParser.T__26:
                self.state = 47
                self.vpart()
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vpart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DCLParser.VpartContext)
            else:
                return self.getTypedRuleContext(DCLParser.VpartContext,i)


        def getRuleIndex(self):
            return DCLParser.RULE_local

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocal" ):
                listener.enterLocal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocal" ):
                listener.exitLocal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocal" ):
                return visitor.visitLocal(self)
            else:
                return visitor.visitChildren(self)




    def local(self):

        localctx = DCLParser.LocalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_local)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DCLParser.T__26:
                self.state = 53
                self.vpart()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ApartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DCLParser.RULE_apart

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class USELESSAPARTContext(ApartContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.ApartContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(DCLParser.INT)
            else:
                return self.getToken(DCLParser.INT, i)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DCLParser.ID)
            else:
                return self.getToken(DCLParser.ID, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUSELESSAPART" ):
                listener.enterUSELESSAPART(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUSELESSAPART" ):
                listener.exitUSELESSAPART(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUSELESSAPART" ):
                return visitor.visitUSELESSAPART(self)
            else:
                return visitor.visitChildren(self)


    class CYCLEPARTContext(ApartContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.ApartContext
            super().__init__(parser)
            self.check = None # Token
            self.cycletime = None # Token
            self.copyFrom(ctx)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(DCLParser.INT)
            else:
                return self.getToken(DCLParser.INT, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCYCLEPART" ):
                listener.enterCYCLEPART(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCYCLEPART" ):
                listener.exitCYCLEPART(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCYCLEPART" ):
                return visitor.visitCYCLEPART(self)
            else:
                return visitor.visitChildren(self)



    def apart(self):

        localctx = DCLParser.ApartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_apart)
        self._la = 0 # Token type
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = DCLParser.USELESSAPARTContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.match(DCLParser.T__7)
                self.state = 60
                self.match(DCLParser.T__8)
                self.state = 61
                self.match(DCLParser.INT)
                self.state = 62
                self.match(DCLParser.T__9)

                self.state = 63
                self.match(DCLParser.INT)
                self.state = 66 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 64
                        self.match(DCLParser.T__10)
                        self.state = 65
                        self.match(DCLParser.INT)

                    else:
                        raise NoViableAltException(self)
                    self.state = 68 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DCLParser.T__10:
                    self.state = 70
                    self.match(DCLParser.T__10)


                pass

            elif la_ == 2:
                localctx = DCLParser.USELESSAPARTContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.match(DCLParser.T__7)
                self.state = 74
                self.match(DCLParser.T__8)
                self.state = 75
                self.match(DCLParser.INT)
                self.state = 76
                self.match(DCLParser.T__9)
                self.state = 78 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 77
                    self.match(DCLParser.ID)
                    self.state = 80 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==DCLParser.ID):
                        break

                pass

            elif la_ == 3:
                localctx = DCLParser.CYCLEPARTContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.match(DCLParser.T__7)
                self.state = 83
                self.match(DCLParser.T__8)
                self.state = 84
                localctx.check = self.match(DCLParser.INT)
                self.state = 85
                self.match(DCLParser.T__9)
                self.state = 86
                localctx.cycletime = self.match(DCLParser.INT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TpartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DCLParser.RULE_tpart

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ENUMPARTContext(TpartContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.TpartContext
            super().__init__(parser)
            self.enumname = None # Token
            self.copyFrom(ctx)

        def varnamelist(self):
            return self.getTypedRuleContext(DCLParser.VarnamelistContext,0)

        def ID(self):
            return self.getToken(DCLParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterENUMPART" ):
                listener.enterENUMPART(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitENUMPART" ):
                listener.exitENUMPART(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitENUMPART" ):
                return visitor.visitENUMPART(self)
            else:
                return visitor.visitChildren(self)


    class BITFIELDPARTContext(TpartContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.TpartContext
            super().__init__(parser)
            self.bitfieldname = None # Token
            self.fieldtype = None # Token
            self.copyFrom(ctx)

        def varnamelist(self):
            return self.getTypedRuleContext(DCLParser.VarnamelistContext,0)

        def ID(self):
            return self.getToken(DCLParser.ID, 0)
        def TYPE(self):
            return self.getToken(DCLParser.TYPE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBITFIELDPART" ):
                listener.enterBITFIELDPART(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBITFIELDPART" ):
                listener.exitBITFIELDPART(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBITFIELDPART" ):
                return visitor.visitBITFIELDPART(self)
            else:
                return visitor.visitChildren(self)



    def tpart(self):

        localctx = DCLParser.TpartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tpart)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = DCLParser.ENUMPARTContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(DCLParser.T__11)
                self.state = 90
                self.match(DCLParser.T__12)
                self.state = 91
                localctx.enumname = self.match(DCLParser.ID)
                self.state = 92
                self.match(DCLParser.T__13)
                self.state = 93
                self.varnamelist()
                pass

            elif la_ == 2:
                localctx = DCLParser.BITFIELDPARTContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.match(DCLParser.T__11)
                self.state = 95
                self.match(DCLParser.T__14)
                self.state = 96
                localctx.bitfieldname = self.match(DCLParser.ID)
                self.state = 97
                self.match(DCLParser.T__13)
                self.state = 98
                localctx.fieldtype = self.match(DCLParser.TYPE)
                self.state = 99
                self.match(DCLParser.T__15)
                self.state = 100
                self.varnamelist()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PpartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DCLParser.RULE_ppart

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SUBPROGRAMContext(PpartContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.PpartContext
            super().__init__(parser)
            self.name = None # Token
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(DCLParser.ID, 0)
        def INT(self):
            return self.getToken(DCLParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSUBPROGRAM" ):
                listener.enterSUBPROGRAM(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSUBPROGRAM" ):
                listener.exitSUBPROGRAM(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSUBPROGRAM" ):
                return visitor.visitSUBPROGRAM(self)
            else:
                return visitor.visitChildren(self)


    class STRUCTUREContext(PpartContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.PpartContext
            super().__init__(parser)
            self.name = None # Token
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(DCLParser.INT, 0)
        def ID(self):
            return self.getToken(DCLParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSTRUCTURE" ):
                listener.enterSTRUCTURE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSTRUCTURE" ):
                listener.exitSTRUCTURE(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSTRUCTURE" ):
                return visitor.visitSTRUCTURE(self)
            else:
                return visitor.visitChildren(self)


    class UDFBContext(PpartContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.PpartContext
            super().__init__(parser)
            self.name = None # Token
            self.switch = None # Token
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(DCLParser.INT, 0)
        def ID(self):
            return self.getToken(DCLParser.ID, 0)
        def TRUE(self):
            return self.getToken(DCLParser.TRUE, 0)
        def FALSE(self):
            return self.getToken(DCLParser.FALSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUDFB" ):
                listener.enterUDFB(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUDFB" ):
                listener.exitUDFB(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUDFB" ):
                return visitor.visitUDFB(self)
            else:
                return visitor.visitChildren(self)


    class MAINPARGRAMContext(PpartContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.PpartContext
            super().__init__(parser)
            self.name = None # Token
            self.switch = None # Token
            self.period = None # Token
            self.phase = None # Token
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(DCLParser.ID, 0)
        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(DCLParser.INT)
            else:
                return self.getToken(DCLParser.INT, i)
        def TRUE(self):
            return self.getToken(DCLParser.TRUE, 0)
        def FALSE(self):
            return self.getToken(DCLParser.FALSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMAINPARGRAM" ):
                listener.enterMAINPARGRAM(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMAINPARGRAM" ):
                listener.exitMAINPARGRAM(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMAINPARGRAM" ):
                return visitor.visitMAINPARGRAM(self)
            else:
                return visitor.visitChildren(self)



    def ppart(self):

        localctx = DCLParser.PpartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ppart)
        self._la = 0 # Token type
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                localctx = DCLParser.MAINPARGRAMContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.match(DCLParser.T__16)
                self.state = 104
                localctx.name = self.match(DCLParser.ID)
                self.state = 105
                self.match(DCLParser.T__10)
                self.state = 106
                _la = self._input.LA(1)
                if not(_la==DCLParser.T__17 or _la==DCLParser.T__18):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 107
                self.match(DCLParser.T__10)
                self.state = 108
                _la = self._input.LA(1)
                if not(_la==DCLParser.T__19 or _la==DCLParser.T__20):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 116
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 109
                    self.match(DCLParser.T__16)
                    self.state = 110
                    self.match(DCLParser.T__8)
                    self.state = 111
                    self.match(DCLParser.INT)
                    self.state = 112
                    self.match(DCLParser.T__9)
                    self.state = 113
                    self.match(DCLParser.T__21)
                    self.state = 114
                    localctx.switch = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not(_la==DCLParser.TRUE or _la==DCLParser.FALSE):
                        localctx.switch = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 115
                    self.match(DCLParser.T__21)


                self.state = 126
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                if la_ == 1:
                    self.state = 118
                    self.match(DCLParser.T__16)
                    self.state = 119
                    self.match(DCLParser.T__8)
                    self.state = 120
                    self.match(DCLParser.INT)
                    self.state = 121
                    self.match(DCLParser.T__9)
                    self.state = 122
                    self.match(DCLParser.T__22)
                    self.state = 123
                    localctx.period = self.match(DCLParser.INT)
                    self.state = 124
                    self.match(DCLParser.T__13)
                    self.state = 125
                    localctx.phase = self.match(DCLParser.INT)


                pass

            elif la_ == 2:
                localctx = DCLParser.SUBPROGRAMContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(DCLParser.T__16)
                self.state = 129
                localctx.name = self.match(DCLParser.ID)
                self.state = 130
                self.match(DCLParser.T__10)
                self.state = 131
                _la = self._input.LA(1)
                if not(_la==DCLParser.T__17 or _la==DCLParser.T__18):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 132
                self.match(DCLParser.T__10)
                self.state = 133
                _la = self._input.LA(1)
                if not(_la==DCLParser.T__19 or _la==DCLParser.T__20):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()

                self.state = 134
                self.match(DCLParser.T__16)
                self.state = 135
                self.match(DCLParser.T__8)
                self.state = 136
                self.match(DCLParser.INT)
                self.state = 137
                self.match(DCLParser.T__9)
                self.state = 138
                self.match(DCLParser.T__23)
                pass

            elif la_ == 3:
                localctx = DCLParser.UDFBContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 139
                self.match(DCLParser.T__16)
                self.state = 140
                localctx.name = self.match(DCLParser.ID)
                self.state = 141
                self.match(DCLParser.T__10)
                self.state = 142
                self.match(DCLParser.T__17)
                self.state = 143
                self.match(DCLParser.T__10)
                self.state = 144
                self.match(DCLParser.T__24)
                self.state = 145
                self.match(DCLParser.T__16)
                self.state = 146
                self.match(DCLParser.T__8)
                self.state = 147
                self.match(DCLParser.INT)
                self.state = 148
                self.match(DCLParser.T__9)
                self.state = 149
                self.match(DCLParser.T__21)
                self.state = 150
                localctx.switch = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==DCLParser.TRUE or _la==DCLParser.FALSE):
                    localctx.switch = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 151
                self.match(DCLParser.T__21)
                pass

            elif la_ == 4:
                localctx = DCLParser.STRUCTUREContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 152
                self.match(DCLParser.T__16)
                self.state = 153
                localctx.name = self.match(DCLParser.ID)
                self.state = 154
                self.match(DCLParser.T__10)
                self.state = 155
                self.match(DCLParser.T__17)
                self.state = 156
                self.match(DCLParser.T__10)
                self.state = 157
                self.match(DCLParser.T__24)
                self.state = 158
                self.match(DCLParser.T__16)
                self.state = 159
                self.match(DCLParser.T__8)
                self.state = 160
                self.match(DCLParser.INT)
                self.state = 161
                self.match(DCLParser.T__9)
                self.state = 162
                self.match(DCLParser.T__25)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VpartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DCLParser.RULE_vpart

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VARDECLTIMEContext(VpartContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.VpartContext
            super().__init__(parser)
            self.position = None # Token
            self.typename = None # Token
            self.dimension = None # Token
            self.varUsageType = None # Token
            self.variablename = None # Token
            self.copyFrom(ctx)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(DCLParser.INT)
            else:
                return self.getToken(DCLParser.INT, i)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DCLParser.ID)
            else:
                return self.getToken(DCLParser.ID, i)
        def TYPE(self):
            return self.getToken(DCLParser.TYPE, 0)
        def timedatas(self):
            return self.getTypedRuleContext(DCLParser.TimedatasContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVARDECLTIME" ):
                listener.enterVARDECLTIME(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVARDECLTIME" ):
                listener.exitVARDECLTIME(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVARDECLTIME" ):
                return visitor.visitVARDECLTIME(self)
            else:
                return visitor.visitChildren(self)


    class USELESSVPARTContext(VpartContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.VpartContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(DCLParser.INT, 0)
        def ID(self):
            return self.getToken(DCLParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUSELESSVPART" ):
                listener.enterUSELESSVPART(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUSELESSVPART" ):
                listener.exitUSELESSVPART(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUSELESSVPART" ):
                return visitor.visitUSELESSVPART(self)
            else:
                return visitor.visitChildren(self)


    class VARDECLINITNUMContext(VpartContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DCLParser.VpartContext
            super().__init__(parser)
            self.position = None # Token
            self.typename = None # Token
            self.dimension = None # Token
            self.varUsageType = None # Token
            self.variablename = None # Token
            self.copyFrom(ctx)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(DCLParser.INT)
            else:
                return self.getToken(DCLParser.INT, i)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DCLParser.ID)
            else:
                return self.getToken(DCLParser.ID, i)
        def TYPE(self):
            return self.getToken(DCLParser.TYPE, 0)
        def numdatas(self):
            return self.getTypedRuleContext(DCLParser.NumdatasContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVARDECLINITNUM" ):
                listener.enterVARDECLINITNUM(self)
